News UAT/force-app/main/default/objects/Contact_Role__c/Contact_Role__c.object-meta.xml
<CustomObject>
    <description>Created to replace the Account/ Contact Roles object.
Standard object does not allow adding additional fields or help texts.</description>
    <label>Contact Role</label>
    <nameField>
        <displayFormat>CTC{00000000}</displayFormat>
        <label>Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>