News UAT/force-app/main/default/objects/Contact_Role__c/fields/HasOptedInOfEmail__c.field-meta.xml
<CustomField>
    <fullName>HasOptedInOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used by Batch Application which will send reminder emails to contact linked to contact role, if it is check, email will go, otherwise it will block</description>
    <label>HasOptedInOfEmail</label>
    <type>Checkbox</type>
</CustomField>