News UAT/force-app/main/default/objects/Contact_Role__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <defaultValue>&quot;Role Description Notes: &quot; &amp; BR() &amp;
&quot;• Agency Contact – e.g. Media Agency Contact, Creative Agency Contact, PR Agency Contact&quot; &amp; BR() &amp;
&quot;• Is Employed by Multiple Businesses – is an employee of more than one business e.g. Employed Mon-Fri by Telstra and on weekends/ after-hours runs own accountancy firm&quot; &amp; BR() &amp;
&quot;• Other Association – Consultant for the Business e.g. Graphic Designer, Financial Services etc&quot;</defaultValue>
    <label>.</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>