News UAT/force-app/main/default/objects/Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>•	Agency Contact – e.g. Media Agency Contact, Creative Agency Contact, PR Agency Contact
•	Is Employed by Multiple Businesses – is an employee of more than one business e.g. Employed Mon-Fri by Telstra and on weekends/ after-hours runs own accountancy firm
•	Other Association – Consultant for the Business e.g. Graphic Designer, Financial Services etc</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency Contact</fullName>
            </value>
            <value>
                <fullName>Other Association</fullName>
            </value>
            <value>
                <fullName>Is Employed by Multiple Businesses</fullName>
            </value>
            <value>
                <fullName>NewsXtend Agency</fullName>
            </value>
            <value>
                <fullName>NewsXtend Customer - Mgmt</fullName>
            </value>
            <value>
                <fullName>NewsXtend Customer - Non Mgmt</fullName>
            </value>
            <value>
                <fullName>NewsXtend Web Developer</fullName>
            </value>
            <value>
                <fullName>NewsXtend NRM Sales Rep</fullName>
            </value>
            <value>
                <fullName>NewsXtend CNG Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>