News UAT/force-app/main/default/objects/Contact_Role__c/recordTypes/NewsXtendRoles.recordType-meta.xml
<RecordType>
    <fullName>NewsXtendRoles</fullName>
    <active>true</active>
    <description>Record Type for NewsXtend users</description>
    <label>NewsXtendRoles</label>
</RecordType>