News UAT/force-app/main/default/objects/Contact_Role__c/recordTypes/SalesRoles.recordType-meta.xml
<RecordType>
    <fullName>SalesRoles</fullName>
    <active>true</active>
    <description>Record Type to display Roles for the Sales team</description>
    <label>SalesRoles</label>
</RecordType>